implement get all pictures

--- a/Issue-Tracking-System/app/common/footer-directive.html
+++ b/Issue-Tracking-System/app/common/footer-directive.html
@@ -1,8 +1,5 @@
 <footer>
     <div class="text-center">
-        My Social Network web site &copy; 2016
-    </div>
-    <div>
-        <a href="#">Like us in a FB</a>
+        Issue Tracking System &copy; 2016
     </div>
 </footer>
