--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -43,7 +43,7 @@
     <div ng-view />
 </div>
 
-<div footer-directive something="something" />
+<div footer-directive something="something" class="panel-footer"/>
 
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/jquery-ui/ui/datepicker.js"></script>
@@ -60,5 +60,7 @@
 <script src="app/home/home-controller.js"></script>
 <script src="app/news-feed/news-feed-controller.js"></script>
 <script src="app/news-feed/feed.js"></script>
+<script src="app/projects/projects-controller.js"></script>
+<script src="app/projects/feed.js"></script>
 </body>
 </html>
