--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -61,6 +61,7 @@
 <script src="app/news-feed/news-feed-controller.js"></script>
 <script src="app/news-feed/feed.js"></script>
 <script src="app/projects/projects-controller.js"></script>
+<script src="app/projects/project-details-controller.js"></script>
 <script src="app/projects/feed.js"></script>
 </body>
 </html>
