implement issue-details page

--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -63,5 +63,7 @@
 <script src="app/projects/projects-controller.js"></script>
 <script src="app/projects/project-details-controller.js"></script>
 <script src="app/projects/feed.js"></script>
+<script src="app/issues/issues-feed.js"></script>
+<script src="app/issues/issue-details-controller.js"></script>
 </body>
 </html>
