--- a/Issue-Tracking-System/app/projects/project-details.html
+++ b/Issue-Tracking-System/app/projects/project-details.html
@@ -1,20 +1,45 @@
 <h2>{{currProject.Name}}</h2>
-<a href="#/projects/{{currProject.Id}}/edit" class="btn btn-primary">Edit</a>
-<a href="#/projects/{{currProject.Id}}/add-issue" class="btn btn-primary">Add Issue</a>
-<div><strong>Project key: </strong>{{currProject.Key}}</div>
-<div><strong>Name: </strong>{{currProject.Name}}</div>
-<div><strong>Description: </strong>{{currProject.Description}}</div>
-<div><strong>Lead: </strong>{{currProject.Lead.Username}}</div>
-<div>
-    <strong>Labels: </strong>
-    <div ng-repeat="label in currProject.Labels">
-        <span>{{label.Name}}</span>
+<div class="row">
+    <div class="col-md-4">
+        <a href="#/projects/{{currProject.Id}}/edit" class="btn btn-primary">Edit</a>
+        <a href="#/projects/{{currProject.Id}}/add-issue" class="btn btn-primary">Add Issue</a>
+        <div><strong>Project key: </strong>{{currProject.ProjectKey}}</div>
+        <div><strong>Name: </strong>{{currProject.Name}}</div>
+        <div><strong>Description: </strong>{{currProject.Description}}</div>
+        <div><strong>Lead: </strong>{{currProject.Lead.Username}}</div>
+        <div>
+            <strong>Labels: </strong>
+            <div ng-repeat="label in currProject.Labels">
+                <span>{{label.Name}}, </span>
+            </div>
+        </div>
+        <div>
+            <strong>Priorities: </strong>
+            <div ng-repeat="priority in currProject.Priorities">
+                <span>{{priority.Name}}, </span>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Due Date</th>
+                <th>Assignee</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="issue in projectIssues">
+                <td><a href="#/issues/{{issue.Id}}">{{issue.Title}}</a></td>
+                <td>{{issue.Description}}</td>
+                <td>{{issue.DueDate}}</td>
+                <td>{{issue.Assignee.Username}}</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
-<div>
-    <strong>Priorities: </strong>
-    <div ng-repeat="priority in currProject.Priorities">
-        <span>{{priority.Name}}</span>
-    </div>
-</div>
+
 
