implement add issue

--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -55,6 +55,7 @@
 <script src="app/common/footer-directive.js"></script>
 <script src="app/common/validate-english-directive.js"></script>
 <script src="app/common/datepicker-directive.js"></script>
+<script src="app/bower_components/angularUtils-pagination/dirPagination.js"></script>
 <script src="app/common/filters.js"></script>
 <script src="app/users/authentication.js"></script>
 <script src="app/users/identity.js"></script>
@@ -64,6 +65,8 @@
 <script src="app/projects/project-details-controller.js"></script>
 <script src="app/projects/feed.js"></script>
 <script src="app/issues/issues-feed.js"></script>
+<script src="app/users/users-feed.js"></script>
 <script src="app/issues/issue-details-controller.js"></script>
+<script src="app/issues/add-issue-controller.js"></script>
 </body>
 </html>
