--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -68,5 +68,6 @@
 <script src="app/users/users-feed.js"></script>
 <script src="app/issues/issue-details-controller.js"></script>
 <script src="app/issues/add-issue-controller.js"></script>
+<script src="app/issues/edit-issue-controller.js"></script>
 </body>
 </html>
