--- a/Issue-Tracking-System/app/issues/issue-details.html
+++ b/Issue-Tracking-System/app/issues/issue-details.html
@@ -1,31 +1,22 @@
 <h2>{{currIssue.Title}}</h2>
 <div class="row">
     <div class="col-md-8">
-        <form name="editIssueForm">
-        <!--<a href="#/issues/{{currIssue.Id}}/edit" class="btn btn-primary">Edit</a>-->
-        <!--<div><strong>Title: </strong>{{currIssue.Title}}</div>-->
-        <!--<div><strong>Issue key: </strong>{{currIssue.IssueKey}}</div>-->
-        <!--<div><strong>Description: </strong>{{currIssue.Description}}</div>-->
-        <!--<div><strong>Assignee: </strong>{{currIssue.Assignee.Username}}</div>-->
-        <!--<div><strong>Priority Id: </strong>{{currIssue.Priority.Id}}</div>-->
-        <!--<div><strong>Due Date: </strong>{{currIssue.DueDate}}</div>-->
-        <button ng-click="editIssue(currIssue)" class="btn btn-primary">Edit</button>
-        <div><strong>Title: </strong><input ng-model="currIssue.Title" type="text" value="{{currIssue.Title}}"></div>
+        <a href="#/issues/{{currIssue.Id}}/edit" class="btn btn-primary">Edit</a>
+        <div><strong>Title: </strong>{{currIssue.Title}}</div>
         <div><strong>Issue key: </strong>{{currIssue.IssueKey}}</div>
-        <div><strong>Description: </strong><input ng-model="currIssue.Description" type="text" value="{{currIssue.Description}}"></div>
-        <div><strong>Assignee: </strong><input ng-model="currIssue.Assignee.Username" type="text" value="{{currIssue.Assignee.Username}}"></div>
-        <div><strong>Priority Id: </strong><input ng-model="currIssue.Priority.Id" type="text" value="{{currIssue.Priority.Id}}"></div>
-        <div><strong>Due Date: </strong><input ng-model="currIssue.DueDate" type="text" value="{{currIssue.DueDate}}"></div>
-        <div>Author: {{currIssue.Author.Username}}</div>
-        <div>Project: {{currIssue.Project.Name}}</div>
-        <div>Status: {{currIssue.Status.Name}}</div>
+        <div><strong>Description: </strong>{{currIssue.Description}}</div>
+        <div><strong>Assignee: </strong>{{currIssue.Assignee.Username}}</div>
+        <div><strong>Priority: </strong>{{currIssue.Priority.Name}}</div>
+        <div><strong>Due Date: </strong>{{currIssue.DueDate}}</div>
+        <div><strong>Author: </strong>{{currIssue.Author.Username}}</div>
+        <div><strong>Project: </strong>{{currIssue.Project.Name}}</div>
+        <div><strong>Status: </strong>{{currIssue.Status.Name}}</div>
         <div>
             <strong>Labels: </strong>
             <div ng-repeat="label in currIssue.Labels">
                 <span>{{label.Name}}, </span>
             </div>
         </div>
-        </form>
     </div>
     <div class="col-md-4">
         <h4>Available statuses:</h4>
@@ -42,7 +33,7 @@
         </div>
         <form name="addCommentForm">
             <div><strong>Text:</strong></div>
-            <textarea ng-model="comment.text" class="input-sm"></textarea><br/>
+            <textarea ng-model="comment.text" class="form-control"></textarea><br/>
             <button ng-click="addComment(comment)" ng-class="addCommentForm.$invalid ? 'disabled-button' : ''" ng-disabled="addCommentForm.$invalid" class="btn btn-primary">Add Comment</button>
         </form>
     </div>
