--- a/Issue-Tracking-System/app/projects/project-details.html
+++ b/Issue-Tracking-System/app/projects/project-details.html
@@ -1,4 +1,4 @@
-<h2>{{currProject.Name}}</h2>
+<h2><span class="glyphicon glyphicon-folder-open"></span><br>{{currProject.Name}}</h2>
 <div class="row">
     <div class="col-md-4">
         <a href="#/projects/{{currProject.Id}}/edit" class="btn btn-primary">Edit</a>
