--- a/Issue-Tracking-System/app/projects/projects.html
+++ b/Issue-Tracking-System/app/projects/projects.html
@@ -1,14 +1,6 @@
-<!--<h1>Projects</h1>-->
-<!--<div ng-repeat="project in allProjects">-->
-    <!--<strong>{{project.Name}}</strong>-->
-    <!--<a href="#/projects/{{project.Id}}" class="btn btn-info">View</a>-->
-<!--</div>-->
-<!--<a href="#" class="btn btn-primary">Add New Project</a>-->
-
-
 <div class="row">
     <div class="col-lg-12">
-        <h1><span class="glyphicon glyphicon-folder-open"></span><br>Projects</h1>
+        <h1><span class="glyphicon glyphicon-list-alt"></span><br>Projects</h1>
         <a href="#/projects/add" class="btn btn-primary">Add New Project</a>
         <div class="panel panel-success">
             <ul class="text-left list-group">
