--- a/Issue-Tracking-System/app/home/home.html
+++ b/Issue-Tracking-System/app/home/home.html
@@ -2,27 +2,29 @@
 
 <div class="row">
     <div class="col-md-4 col-md-offset-1 border">
+        <h2>Login</h2>
         <form name="loginUserForm">
-            <label for="username">Username/E-mail</label>
-            <input type="text" id="username" required="required" ng-model="loginUser.username" class="form-control" />
+            <label for="username" class="glyphicon glyphicon-user"></label><br/>
+            <input type="text" id="username" required="required" ng-model="loginUser.username" class="form-control", placeholder="E-mail..."/>
             <br />
-            <label for="password">Password</label>
-            <input type="password" required="required" ng-model="loginUser.password" id="password" class="form-control" />
+            <label for="password" class="glyphicon glyphicon-lock"></label>
+            <input type="password" required="required" ng-model="loginUser.password" id="password" class="form-control" placeholder="Password..."/>
             <br />
             <button class="btn btn-primary" ng-disabled="loginUserForm.$invalid" ng-click="login(loginUser)">Login</button>
         </form>
     </div>
 
     <div class="col-md-4 col-md-offset-2 border">
+        <h2>Register</h2>
         <form name="registerUserForm">
-            <label for="reg-email">E-mail</label>
-            <input type="email" required="required" ng-model="registerUser.email" id="reg-email" class="form-control" />
+            <label for="reg-email" class="glyphicon glyphicon-user"></label><br/>
+            <input type="email" required="required" ng-model="registerUser.email" id="reg-email" class="form-control" placeholder="E-mail..."/>
             <br />
-            <label for="reg-password">Password</label>
-            <input type="password" required="required" min-length="6" max-length="100" ng-model="registerUser.password" id="reg-password" class="form-control" />
+            <label for="reg-password" class="glyphicon glyphicon-lock"></label>
+            <input type="password" required="required" min-length="6" max-length="100" ng-model="registerUser.password" id="reg-password" class="form-control" placeholder="Password..."/>
             <br />
-            <label for="reg-confirm-password">Confirm Password</label>
-            <input type="password" required="required" min-length="6" max-length="100" ng-model="registerUser.confirmPassword" id="reg-confirm-password" class="form-control" />
+            <label for="reg-confirm-password" class="glyphicon glyphicon-lock"></label>
+            <input type="password" required="required" min-length="6" max-length="100" ng-model="registerUser.confirmPassword" id="reg-confirm-password" class="form-control" placeholder="Repeat Password..."/>
             <br />
             <button class="btn btn-primary" ng-disabled="registerUserForm.$invalid || registerUser.password != registerUser.confirmPassword" ng-click="register(registerUser)">Register</button>
         </form>
