--- a/Issue-Tracking-System/app/issues/add-issue.html
+++ b/Issue-Tracking-System/app/issues/add-issue.html
@@ -1,20 +1,22 @@
-<h2>Add New Issue</h2>
+<h2><span class="glyphicon glyphicon-plus"></span><br>Add New Issue</h2>
 <div class="row">
     <div class="col-md-12">
         <form name="addIssueForm">
-            <div><strong>Title: </strong><input ng-model="issue.Title" type="text" class="form-control"></div>
-            <div><strong>Description: </strong><input ng-model="issue.Description" type="text" class="form-control" ></div>
-            <div><strong>Priority Id: </strong><input ng-model="issue.PriorityId" type="text" class="form-control"></div>
-            <div><strong>Due Date: </strong><input ng-model="issue.DueDate"  type="date" class="form-control"></div>
+            <div><strong>Title: </strong><input ng-model="issue.Title" type="text" class="form-control" required></div>
+            <div><strong>Description: </strong><input ng-model="issue.Description" type="text" class="form-control" required></div>
+            <div><strong>Priority Id: </strong><input ng-model="issue.PriorityId" type="text" class="form-control" required></div>
+            <div><strong>Due Date: </strong><input ng-model="issue.DueDate"  type="date" class="form-control" required></div>
             <div class="form-group">
                 <label for="InputAssigned">Assignee</label>
                 <select id="InputAssigned" required="required" ng-model="issue.AssigneeId"
                         class="form-control"
-                        ng-options="u.Id as u.Username for u in allUsers | orderBy: 'Username'">
+                        ng-options="u.Id as u.Username for u in allUsers | orderBy: 'Username'"
+                        required>
                     <option disabled="disabled" value="">-- choose user --</option>
                 </select>
             </div>
             <button ng-click="addNewIssue(issue)" class="btn btn-primary">Add</button>
+            <button ng-click="cancelAddIssue()" class="btn btn-primary">Cancel</button>
         </form>
     </div>
 </div>
