--- a/Issue-Tracking-System/app/issues/edit-issue.html
+++ b/Issue-Tracking-System/app/issues/edit-issue.html
@@ -1,11 +1,11 @@
-<h2>Edit Issue</h2>
+<h2><span class="glyphicon glyphicon-pencil"></span><br>Edit Issue</h2>
 <div class="row">
     <div class="col-md-12">
         <form name="editIssueForm">
-            <div><strong>Title: </strong><input ng-model="issue.Title" type="text" class="form-control"></div>
-            <div><strong>Description: </strong><input ng-model="issue.Description" type="text" class="form-control" ></div>
-            <div><strong>Priority Id: </strong><input ng-model="issue.PriorityId" type="text" class="form-control"></div>
-            <div><strong>Due Date: </strong><input ng-model="issue.DueDate"  type="date" class="form-control"></div>
+            <div><strong>Title: </strong><input ng-model="issue.Title" type="text" class="form-control" required></div>
+            <div><strong>Description: </strong><input ng-model="issue.Description" type="text" class="form-control" required></div>
+            <div><strong>Priority Id: </strong><input ng-model="issue.PriorityId" type="text" class="form-control" required></div>
+            <div><strong>Due Date: </strong><input ng-model="issue.DueDate"  type="date" class="form-control" required></div>
             <div class="form-group">
                 <label for="InputAssigned">Assignee</label>
                 <select id="InputAssigned" required="required" ng-model="issue.AssigneeId"
@@ -15,6 +15,7 @@
                 </select>
             </div>
             <button ng-click="editIssue(issue)" class="btn btn-primary">Edit</button>
+            <button ng-click="cancelEditIssue()" class="btn btn-primary">Cancel</button>
         </form>
     </div>
 </div>
