--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -63,6 +63,7 @@
 <script src="app/dashboard/dashboard-controller.js"></script>
 <script src="app/projects/projects-controller.js"></script>
 <script src="app/projects/project-details-controller.js"></script>
+<script src="app/projects/add-project-controller.js"></script>
 <script src="app/projects/feed.js"></script>
 <script src="app/issues/issues-feed.js"></script>
 <script src="app/users/users-feed.js"></script>
