--- a/Issue-Tracking-System/app/projects/project-details.html
+++ b/Issue-Tracking-System/app/projects/project-details.html
@@ -34,7 +34,7 @@
             <tr ng-repeat="issue in projectIssues">
                 <td><a href="#/issues/{{issue.Id}}">{{issue.Title}}</a></td>
                 <td>{{issue.Description}}</td>
-                <td>{{issue.DueDate}}</td>
+                <td>{{issue.DueDate | date}}</td>
                 <td>{{issue.Assignee.Username}}</td>
             </tr>
             </tbody>
