--- a/Issue-Tracking-System/app/projects/projects.html
+++ b/Issue-Tracking-System/app/projects/projects.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-lg-12">
         <h1><span class="glyphicon glyphicon-list-alt"></span><br>Projects</h1>
-        <a href="#/projects/add" class="btn btn-primary">Add New Project</a>
+        <a href="#/projects-add" class="btn btn-primary">Add New Project</a>
         <div class="panel panel-success">
             <ul class="text-left list-group">
-                <a href="#/projects/{{project.Id}}" ng-repeat="project in allProjects" class="list-group-item">{{project.Name}}</a>
+                <a href="#/projects/{{project.Id}}" ng-repeat="project in allProjects | orderBy: PostedOn" class="list-group-item">{{project.Name}}</a>
             </ul>
         </div>
     </div>
