--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -31,7 +31,7 @@
                     <a href="#/projects">Projects</a>
                 </li>
                 <li>
-                    <a href="#/logout">Logout</a>
+                    <a href="" ng-click="logout()">Logout</a>
                 </li>
             </ul>
 
