--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -34,7 +34,6 @@
                     <a href="" ng-click="logout()">Logout</a>
                 </li>
             </ul>
-
         </div>
     </div>
 </div>
@@ -43,7 +42,7 @@
     <div ng-view />
 </div>
 
-<div footer-directive something="something" class="panel-footer"/>
+<div footer-directive class="panel-footer"/>
 
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/jquery-ui/ui/datepicker.js"></script>
@@ -53,7 +52,6 @@
 <script src="app/app.js"></script>
 <script src="app/common/main-controller.js"></script>
 <script src="app/common/footer-directive.js"></script>
-<script src="app/common/validate-english-directive.js"></script>
 <script src="app/common/datepicker-directive.js"></script>
 <script src="app/bower_components/angularUtils-pagination/dirPagination.js"></script>
 <script src="app/common/filters.js"></script>
@@ -64,6 +62,7 @@
 <script src="app/projects/projects-controller.js"></script>
 <script src="app/projects/project-details-controller.js"></script>
 <script src="app/projects/add-project-controller.js"></script>
+<script src="app/projects/edit-project-controller.js"></script>
 <script src="app/projects/feed.js"></script>
 <script src="app/issues/issues-feed.js"></script>
 <script src="app/users/users-feed.js"></script>
