--- a/Issue-Tracking-System/app/projects/projects.html
+++ b/Issue-Tracking-System/app/projects/projects.html
@@ -4,14 +4,14 @@
         <a href="#/projects-add" class="btn btn-primary" ng-if="currentUser.isAdmin">Add New Project</a>
         <div class="panel panel-success">
             <ul class="text-left list-group">
-                <a href="#/projects/{{project.Id}}" ng-repeat="project in allProjects | orderBy: PostedOn" class="list-group-item">{{project.Name}}</a>
+                <a href="#/projects/{{project.Id}}" ng-repeat="project in allProjects.Projects " class="list-group-item">{{project.Name}}</a>
             </ul>
         </div>
 
-        <pagination total-items="allProjects.numItems"
+        <pagination total-items="allProjects.TotalCount"
                     ng-model="projectsParams.startPage"
                     items-per-page="projectsParams.pageSize"
-                    ng-change="reloadAds()"
+                    ng-change="reloadProjects()"
                     max-size="9"
                     boundary-links="true">
         </pagination>
