--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -47,6 +47,7 @@
 <script src="app/bower_components/angular/angular.js"></script>
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/jquery-ui/ui/datepicker.js"></script>
+<script src="app/bower_components/jquery.noty/jquery.noty.js"></script>
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="app/bower_components/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
@@ -71,5 +72,6 @@
 <script src="app/issues/issue-details-controller.js"></script>
 <script src="app/issues/add-issue-controller.js"></script>
 <script src="app/issues/edit-issue-controller.js"></script>
+<script src="app/common/notifyService.js"></script>
 </body>
 </html>
