--- a/Issue-Tracking-System/app/issues/add-issue.html
+++ b/Issue-Tracking-System/app/issues/add-issue.html
@@ -1,4 +1,4 @@
-<h2><span class="glyphicon glyphicon-plus"></span><br>Add New Issue</h2>
+<h2><span class="glyphicon glyphicon-plus-sign"></span><br>Add New Issue</h2>
 <div class="row">
     <div class="col-md-12">
         <form name="addIssueForm">
