--- a/Issue-Tracking-System/app/issues/edit-issue.html
+++ b/Issue-Tracking-System/app/issues/edit-issue.html
@@ -2,19 +2,19 @@
 <div class="row">
     <div class="col-md-12">
         <form name="editIssueForm">
-            <div><strong>Title: </strong><input ng-model="issue.Title" type="text" class="form-control" required></div>
-            <div><strong>Description: </strong><input ng-model="issue.Description" type="text" class="form-control" required></div>
-            <div><strong>Priority Id: </strong><input ng-model="issue.PriorityId" type="text" class="form-control" required></div>
-            <div><strong>Due Date: </strong><input ng-model="issue.DueDate"  type="date" class="form-control" required></div>
+            <div><strong>Title: </strong><input ng-model="currIssue.Title" type="text" class="form-control" required ></div>
+            <div><strong>Description: </strong><input ng-model="currIssue.Description" type="text" class="form-control" required></div>
+            <div><strong>Priority Id: </strong><input ng-model="currIssue.Priority.Id" type="text" class="form-control" required></div>
+            <div><strong>Due Date: </strong><input ng-model="currIssue.DueDate"  type="date" class="form-control" required></div>
             <div class="form-group">
                 <label for="InputAssigned">Assignee</label>
-                <select id="InputAssigned" required="required" ng-model="issue.AssigneeId"
+                <select id="InputAssigned" required="required" ng-model="currIssue.Assignee.Id"
                         class="form-control"
-                        ng-options="u.Id as u.Username for u in allUsers | orderBy: 'Username'">
+                        ng-options="u.Id as u.Username for u in allUsers | orderBy: 'Username'" >
                     <option disabled="disabled" value="">-- choose user --</option>
                 </select>
             </div>
-            <button ng-click="editIssue(issue)" class="btn btn-primary">Edit</button>
+            <button ng-click="editIssue(currIssue)" class="btn btn-primary">Edit</button>
             <button ng-click="cancelEditIssue()" class="btn btn-primary">Cancel</button>
         </form>
     </div>
