--- a/Issue-Tracking-System/app/projects/project-details.html
+++ b/Issue-Tracking-System/app/projects/project-details.html
@@ -27,6 +27,7 @@
                 <select id="IssueStatus" ng-model="filterByStatus" class="form-control" >
                     <option value="Open">Open</option>
                     <option value="InProgress">In Progress</option>
+                    <option value="StoppedProgress">Stopped Progress</option>
                     <option value="Resolved">Resolved</option>
                     <option value="Closed">Closed</option>
                     <option value="ReOpened">Re-Opened</option>
