--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -31,6 +31,9 @@
                     <a href="#/projects">Projects</a>
                 </li>
                 <li>
+                    <a href="#/profile/password">Profile</a>
+                </li>
+                <li>
                     <a href="" ng-click="logout()">Logout</a>
                 </li>
             </ul>
@@ -72,6 +75,7 @@
 <script src="app/issues/issue-details-controller.js"></script>
 <script src="app/issues/add-issue-controller.js"></script>
 <script src="app/issues/edit-issue-controller.js"></script>
+<script src="app/users/profile-controller.js"></script>
 <script src="app/common/notifyService.js"></script>
 </body>
 </html>
