--- a/Issue-Tracking-System/app/projects/edit-project.html
+++ b/Issue-Tracking-System/app/projects/edit-project.html
@@ -2,27 +2,19 @@
 <div class="row">
     <div class="col-md-12">
         <form name="editProjectForm">
-            <div><strong>Name: </strong><input ng-model="project.Name" type="text" class="form-control" required placeholder="Name..."></div>
-            <div><strong>Description: </strong><input ng-model="project.Description" type="text" class="form-control" required placeholder="Description..."></div>
-            <div><strong>Priorities (separated by comma): </strong><input ng-model="project.AllPriorities" type="text" class="form-control" placeholder="Priorities..."></div>
-            <div><strong>Labels (separated by comma): </strong><input ng-model="project.Labels" type="text" class="form-control" placeholder="Labels..."></div>
+            <div><strong>Name: </strong><input ng-model="currProject.Name" type="text" class="form-control" required placeholder="Name..."></div>
+            <div><strong>Description: </strong><input ng-model="currProject.Description" type="text" class="form-control" required placeholder="Description..."></div>
+            <div><strong>Priorities (separated by comma): </strong><input ng-model="currProject.AllPriorities" type="text" class="form-control" placeholder="Priorities..."></div>
+            <div><strong>Labels (separated by comma): </strong><input ng-model="currProject.Labels" type="text" class="form-control" placeholder="Labels..."></div>
             <div class="form-group">
                 <label for="InputLead">Leader</label>
-                <select id="InputLead" required="required" ng-model="project.LeadId"
+                <select id="InputLead" required="required" ng-model="currProject.Lead.Id"
                         class="form-control"
                         ng-options="u.Id as u.Username for u in allUsers | orderBy: 'Username'">
                     <option disabled="disabled" value="">-- choose user --</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label for="InputAssigned">Assignee</label>
-                <select id="InputAssigned" required="required" ng-model="project.AssigneeId"
-                        class="form-control"
-                        ng-options="u.Id as u.Username for u in allUsers | orderBy: 'Username'">
-                    <option disabled="disabled" value="">-- choose user --</option>
-                </select>
-            </div>
-            <button ng-click="editProject(project)" class="btn btn-primary">Edit</button>
+            <button ng-click="editProject(currProject)" class="btn btn-primary">Edit</button>
             <button ng-click="cancelEditProject()" class="btn btn-primary">Cancel</button>
         </form>
     </div>
