--- a/Issue-Tracking-System/app/projects/edit-project.html
+++ b/Issue-Tracking-System/app/projects/edit-project.html
@@ -5,7 +5,15 @@
             <div><strong>Name: </strong><input ng-model="currProject.Name" type="text" class="form-control" required placeholder="Name..."></div>
             <div><strong>Description: </strong><input ng-model="currProject.Description" type="text" class="form-control" required placeholder="Description..."></div>
             <div><strong>Priorities (separated by comma): </strong><input ng-model="currProject.AllPriorities" type="text" class="form-control" placeholder="Priorities..."></div>
-            <div><strong>Labels (separated by comma): </strong><input ng-model="currProject.Labels" type="text" class="form-control" placeholder="Labels..."></div>
+            <!--<div><strong>Labels (separated by comma): </strong><input ng-model="currProject.Labels" type="text" class="form-control" placeholder="Labels..."></div>-->
+            <div class="form-group">
+                <label for="InputLabel">Labels</label>
+                <select id="InputLabel" required="required" ng-model="currProject.AllLabels"
+                        class="form-control"
+                        ng-options="l.Name for l in labels | orderBy: 'Name'">
+                    <option disabled="disabled" value="">-- choose label --</option>
+                </select>
+            </div>
             <div class="form-group">
                 <label for="InputLead">Leader</label>
                 <select id="InputLead" required="required" ng-model="currProject.Lead.Id"
