implement autocomplete search of labels

--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -60,6 +60,7 @@
 <script src="app/common/main-controller.js"></script>
 <script src="app/common/footer-directive.js"></script>
 <script src="app/common/datepicker-directive.js"></script>
+<script src="app/common/autocomplete-directive.js"></script>
 <script src="app/bower_components/angularUtils-pagination/dirPagination.js"></script>
 <script src="app/common/filters.js"></script>
 <script src="app/users/authentication.js"></script>
