--- a/Issue-Tracking-System/app/projects/add-project.html
+++ b/Issue-Tracking-System/app/projects/add-project.html
@@ -4,17 +4,13 @@
         <form name="addProjectForm">
             <div><strong>Name: </strong><input ng-model="project.Name" type="text" class="form-control" required placeholder="Name..."></div>
             <div><strong>Description: </strong><input ng-model="project.Description" type="text" class="form-control" required placeholder="Description..."></div>
-            <!--<div><strong>Project Key: </strong><input ng-model="project.ProjectKey" type="text" class="form-control" required value="{{project.Name}}"></div>-->
             <div><strong>Priorities (separated by comma): </strong><input ng-model="project.AllPriorities" type="text" class="form-control" placeholder="Priorities..."></div>
-            <!--<div><strong>Labels (separated by comma): </strong><input ng-model="project.AllLabels" type="text" class="form-control" placeholder="Labels..."></div>-->
-            <div class="form-group">
-                <label for="InputLabel">Labels</label>
-                <select id="InputLabel" required="required" ng-model="project.AllLabels"
-                        class="form-control"
-                        ng-options="l.Name for l in labels | orderBy: 'Name'">
-                    <option disabled="disabled" value="">-- choose label --</option>
-                </select>
-            </div>
+            <label>Labels</label>
+            <autocomplete ng-model="project.AllLabels"
+                          attr-placeholder="type to search labels..."
+                          click-activation="true"
+                          data="labelsNames">
+            </autocomplete>
             <div class="form-group">
                 <label for="InputLead">Leader</label>
                 <select id="InputLead" required="required" ng-model="project.LeadId"
