fix problem with filtering unique projects on dashboard

--- a/Issue-Tracking-System/app/dashboard/dashboard.html
+++ b/Issue-Tracking-System/app/dashboard/dashboard.html
@@ -2,12 +2,22 @@
 <div class="row">
     <div class="col-md-5">
         <h2>Affiliated Projects</h2>
-        <div ng-repeat="issue in myIssues.Issues | unique:'Project'" >
-            <h3><a href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a></h3>
+        <div ng-if="!myIssues.Issues.length" >
+            <h4>You have not affiliated projects</h4>
+        </div>
+        <!--<div ng-repeat="issue in myIssues.Issues | unique:'Project.Id'" >-->
+            <!--<h3><a href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a></h3>-->
+        <!--</div>-->
+        <div ng-repeat="project in affiliatedProjects" >
+            <h3><a href="#/projects/{{project.Id}}">{{project.Name}}</a></h3>
         </div>
     </div>
     <div class="col-md-7">
         <h2><span class="glyphicon glyphicon-tasks"></span><br>My Tasks</h2>
+        <div ng-if="!myIssues.Issues.length" >
+            <h4>You have not assigned issues yet</h4>
+        </div>
+        <div ng-if="myIssues.Issues.length">
         <table class="table table-hover ">
             <thead>
             <tr>
@@ -33,5 +43,6 @@
                     max-size="9"
                     boundary-links="true">
         </pagination>
+        </div>
     </div>
 </div>
