--- a/Issue-Tracking-System/index.html
+++ b/Issue-Tracking-System/index.html
@@ -56,6 +56,7 @@
 <script src="app/bower_components/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
 <script src="app/bower_components/angular-route/angular-route.js"></script>
 <script src="app/bower_components/angular/angular-resource.js"></script>
+<script src="app/bower_components/angular-loading-bar/src/loading-bar.js"></script>
 <script src="app/app.js"></script>
 <script src="app/common/main-controller.js"></script>
 <script src="app/common/footer-directive.js"></script>
